chore(git): remove .claude/settings.local.json from tracking and add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,6 @@ docs/temp/
 # Capacitor specific
 android/capacitor.config.json
 ios/capacitor.config.json
+
+#Claude
+claude/settings.local.json
